[gd_scene load_steps=5 format=3 uid="uid://dac8hb5ycwgr5"]

[ext_resource type="Script" path="res://objets_intératif/zone__étude.gd" id="1_pdkg4"]
[ext_resource type="Texture2D" uid="uid://idnl1hauh4uk" path="res://UI/Keyboard Letters and Symbols.png" id="2_drl5n"]
[ext_resource type="PackedScene" uid="uid://c81mpte26ou7w" path="res://UI/tuile_boite_de_texte.tscn" id="3_lx4l5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ckna"]
size = Vector2(72, 11)

[node name="Zone_ étude" type="Node2D"]
scale = Vector2(1.5, 1.5)
script = ExtResource("1_pdkg4")
metadata/_edit_group_ = true

[node name="Zone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zone"]
position = Vector2(0, 6)
shape = SubResource("RectangleShape2D_5ckna")

[node name="F" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_drl5n")
hframes = 8
vframes = 14
frame = 21

[node name="Menu" type="Sprite2D" parent="."]
visible = false

[node name="Tuile_boite_de_texte" parent="Menu" instance=ExtResource("3_lx4l5")]
layer_0/tile_data = PackedInt32Array(-262148, 0, 0, -196612, 0, 1, -262147, 65536, 0, -196611, 65536, 1, -327678, 524288, 0, -262142, 65536, 1, -327677, 589824, 0, -262141, 589824, 1, 2, 65536, 1, 65538, 0, 13, 3, 65536, 12, 65539, 65536, 13, 65532, 786432, 0, 131068, 786432, 1, 65533, 65536, 1, 131069, 851968, 1, 65534, 65536, 1, 65535, 65536, 1, 0, 65536, 1, 1, 65536, 1, -65534, 65536, 1, -131070, 65536, 1, -196606, 65536, 1, -262143, 65536, 1, -262144, 65536, 1, -196609, 65536, 1, -196610, 65536, 1, -131075, 65536, 1, -65539, 65536, 1, -3, 65536, 1, -2, 65536, 1, -1, 65536, 1, -65536, 65536, 1, -65535, 65536, 1, -196607, 65536, 1, -196608, 65536, 1, -131073, 65536, 1, -131074, 65536, 1, -65538, 65536, 1, -131071, 65536, 1, -131072, 65536, 1, -65537, 65536, 1, -262146, 131072, 0, -262145, 131072, 0, -327680, 131072, 0, -327679, 131072, 0, -196605, 458752, 1, -131069, 458752, 1, -65533, 458752, 1, 65537, 655360, 3, 65536, 655360, 3, 131071, 655360, 3, 131070, 655360, 3, -4, 0, 1, -65540, 0, 1, -131076, 0, 1)

[node name="TextEdit" type="Label" parent="Menu"]
texture_filter = 1
offset_left = -28.0
offset_top = -72.0
offset_right = 28.0
offset_bottom = -46.0
text = "Étudier"

[node name="btn_étudier" type="Button" parent="Menu"]
offset_left = -34.0
offset_top = -44.0
offset_right = 35.0
offset_bottom = -13.0
text = "1H
"

[node name="btn_quiter" type="Button" parent="Menu"]
offset_left = -35.0
offset_top = -6.0
offset_right = 35.0
offset_bottom = 25.0
text = "Quiter"

[connection signal="body_entered" from="Zone" to="." method="_on_zone_body_entered"]
[connection signal="body_exited" from="Zone" to="." method="_on_zone_body_exited"]
[connection signal="pressed" from="Menu/btn_étudier" to="." method="_on_btn_étudier_pressed"]
[connection signal="pressed" from="Menu/btn_quiter" to="." method="_on_btn_quiter_pressed"]
